--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 aniso8601==8.0.0
+apispec==5.1.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==7.1.2
 Flask==1.1.2
+flask-apispec==0.11.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
 idna==3.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+marshmallow==3.14.1
+packaging==21.3
+pyparsing==3.0.7
 pytz==2020.1
 requests==2.27.1
 six==1.15.0
 SQLAlchemy==1.3.18
 urllib3==1.26.8
+webargs==8.1.0
 Werkzeug==1.0.1
